opam-version: "1.2"
maintainer: "philippe.wang@gmail.com"
authors: [ "Philippe Wang <philippe.wang@gmail.com>" ]
license: "ISC"
homepage: "https://github.com/ocaml/omd"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
remove: [
  ["ocamlfind" "remove" "omd"]
]
depends: [
  "base-bigarray"
  "jbuilder" {build}
]
tags: [
  "org:ocamllabs"
  "org:mirage"
]
