opam-version: "1.2"
maintainer: "philippe.wang@gmail.com"
authors: [ "Philippe Wang <philippe.wang@gmail.com>" ]
license: "ISC"
homepage: "https://github.com/ocaml/omd"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
remove: [
  ["ocamlfind" "remove" "omd"]
]
depends: [
  "base-bigarray"
  "dune" {build & >= "1.0"}
]
tags: [
  "org:ocamllabs"
  "org:mirage"
]
